--- a/LaunchPadLabChallenge/package.json
+++ b/LaunchPadLabChallenge/package.json
@@ -12,34 +12,35 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
-    "css-loader": "^2.1.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^2.1.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.28.2",
-    "webpack-cli": "^3.1.2"
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.2.3",
-    "body-parser": "^1.18.3",
+    "@babel/preset-env": "^7.5.5",
+    "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.19.0",
     "connect-session-sequelize": "^6.0.0",
     "crypto": "^1.0.1",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "lodash": "^4.17.11",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
-    "pg": "^7.7.1",
-    "pg-hstore": "^2.3.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
+    "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1",
+    "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "sequelize": "^4.42.0"
+    "sequelize": "^4.44.3"
   }
 }
