--- a/LaunchPadLabChallenge/package.json
+++ b/LaunchPadLabChallenge/package.json
@@ -34,6 +34,8 @@
     "passport-google-oauth": "^1.0.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
+    "popup": "0.0.3",
+    "popups": "^1.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^6.0.1",
